// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design-system/Modal/ModalFooter Center smoke-test 1`] = `
<hr class="mt-4">
<div class="flex gap-4 justify-center">
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        OK
      </div>
    </div>
  </button>
</div>
`;

exports[`design-system/Modal/ModalFooter Default smoke-test 1`] = `
<hr class="mt-4">
<div class="flex gap-4 justify-end">
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        Cancel
      </div>
    </div>
  </button>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <div>
        OK
      </div>
    </div>
  </button>
</div>
`;

exports[`design-system/Modal/ModalFooter Space smoke-test 1`] = `
<hr class="mt-4">
<div class="flex gap-4 justify-between">
  <div class="flex gap-4">
    <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      <div class="flex items-center gap-2">
        <div>
          Non pertinent
        </div>
      </div>
    </button>
    <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      <div class="flex items-center gap-2">
        <div>
          En cours
        </div>
      </div>
    </button>
    <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-primary-7 hover:!text-primary-8 bg-white hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
      <div class="flex items-center gap-2">
        <div>
          Réalisé
        </div>
      </div>
    </button>
  </div>
  <button class="rounded-lg w-fit border border-solid font-bold group cursor-pointer text-white hover:!text-white bg-primary-7 hover:!bg-primary-8 border-primary-7 hover:!border-primary-8 text-base py-3 px-6">
    <div class="flex items-center gap-2">
      <span class="ri-file-add-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-white group-hover:fill-white">
      </span>
      <div>
        Ajouter
      </div>
    </div>
  </button>
</div>
`;
